--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
 
     defaultConfig {
         applicationId "net.two03d.android.sharelove"
-        minSdkVersion 15
+        minSdkVersion 17
         targetSdkVersion 20
         versionCode 1
         versionName "1.0"
@@ -21,4 +21,6 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'com.android.support:support-v4:20.0.+'
+    compile 'com.jakewharton:butterknife:5.1.2'
 }
